# hireadev

./: .firebaserc  .gitignore  README.md  appwrite.config.json  firebase.json  firestore.rules  hireadev.pem  opencode.json  product.md  render.yaml  storage.rules
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  server.py
backend/.data/: local_state.json
backend/pipeline/: stage1_extract.py  stage2_spam.py  stage3_coarse.py  stage4_deep.py  stage5_enrich.py
backend/utils/: appwrite_db.py  firestore.py  groq_client.py  storage.py
design-system/hireadev/: MASTER.md
design-system/hireadev/pages/: dashboard.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: LoadingWheel.tsx
frontend/src/lib/: appwrite.ts  firebase.ts
frontend/src/pages/: DashboardPage.tsx  DeepResearchPage.tsx  JobSetupPage.tsx  JobsPage.tsx  LandingPage.tsx  UploadPage.tsx
