[project]
name = "hireadev-backend"
version = "0.1.0"
description = "hireadev AI resume pipeline — Firebase Cloud Functions"
requires-python = ">=3.12"
dependencies = [
    "firebase-admin>=6.5.0",
    "firebase-functions>=0.1.0",
    "groq>=0.11.0",
    "pymupdf>=1.24.9",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.0",
    "langdetect>=1.0.9",
    "scikit-learn>=1.5.0",
    "Pillow>=10.4.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
